Closed Bug 1710176 Opened 4 years ago Closed 4 years ago

[Wayland] Don't release callback surface if wl_container->surface is null

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

[Wayland] Don't release callback surface if wl_container->surface is null

Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/751ef8364200 [Wayland] Don't release callback surface if wl_container->surface is null, r=jhorak

Does this bug address the Gdk warning which I mentioned in bug 1645695 comment 13?

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

(In reply to Viktor Jägersküpper from comment #3)

Does this bug address the Gdk warning which I mentioned in bug 1645695 comment 13?

I found a reliable way to reproduce the warning and verified that the patch fixes it indeed. Thanks!

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: