Bug 1710176 [Wayland] Don't release callback surface if wl_container->surface is null, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D114657